# methodology-task1

./: README.md  main.py  pyproject.toml  requirements.txt
engine/: game_engine.py
games/: gcd.py  lcm.py  progression.py
