[tool.flake8]
max-line-length = 88
ignore = "E203, E266, E501, W503"
exclude = ".git,__pycache__,venv"

[tool.black]
line-length = 88
target-version = ['py311']

[project]
name = "methodology-task1"
version = "0.1.0"
dependencies = [
    "flake8",
    "black",
]

[project.scripts]
lint = "flake8 ."
format = "black ."
